tests/neg-custom-args/captures/sep-consume.check
-- Error: tests/neg-custom-args/captures/sep-consume.scala:30:49 -------------------------------------------------------
30 |def test4(consume p: Pair[Ref^, Ref^]): Ref^ = p.fst // error
   |                                               ^^^^^
   |                          Local reach capability p.fst* leaks into capture scope of method test4.
   |                          You could try to abstract the capabilities referred to by p.fst* in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-consume.scala:19:2 --------------------------------------------------------
19 |  x.put(42)  // error
   |  ^
   |  Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
   |  on line 18 and therefore is no longer available.
   |
   |  where:    ^ refers to a root capability classified as Unscoped in the type of parameter x
-- Error: tests/neg-custom-args/captures/sep-consume.scala:21:16 -------------------------------------------------------
21 |  par(rx, () => x.put(42))  // error
   |                ^
   |         Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
   |         on line 18 and therefore is no longer available.
   |
   |         where:    ^ refers to a root capability classified as Unscoped in the type of parameter x
-- Error: tests/neg-custom-args/captures/sep-consume.scala:26:16 -------------------------------------------------------
26 |  def foo = bad(f) // error
   |                ^
   |  Separation failure: argument to consume parameter with type (f : () ->{x.rd} Unit) refers to non-local value f
